--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  margin-top: 100px;
+  margin: 100px 0;
 }
 
 h1,
@@ -18,8 +18,22 @@ h1 {
   font-size: 96px;
 }
 
+@media (max-width: 576px) {
+  h1 {
+    font-size: 48px;
+    line-height: 1.5;
+  }
+}
+
 h2 {
   font-size: 48px;
+}
+
+@media (max-width: 576px) {
+  h2 {
+    font-size: 32px;
+    text-align: center;
+  }
 }
 
 h3 {
@@ -30,6 +44,12 @@ h3 {
 p {
   font-size: 18px;
   line-height: 1.5;
+}
+
+@media (max-width: 576px) {
+  p {
+    text-align: center;
+  }
 }
 
 .navigation-links {
@@ -85,4 +105,12 @@ p {
 
 .email-link:hover {
   text-decoration: underline;
+}
+
+@media (max-width: 576px) {
+  .project-link {
+    display: block;
+    text-align: center;
+    margin: 0 20px;
+  }
 }
