--- a/style.css
+++ b/style.css
@@ -18,22 +18,8 @@ h1 {
   font-size: 96px;
 }
 
-@media (max-width: 576px) {
-  h1 {
-    font-size: 48px;
-    line-height: 1.5;
-  }
-}
-
 h2 {
   font-size: 48px;
-}
-
-@media (max-width: 576px) {
-  h2 {
-    font-size: 32px;
-    text-align: center;
-  }
 }
 
 h3 {
@@ -44,12 +30,6 @@ h3 {
 p {
   font-size: 18px;
   line-height: 1.5;
-}
-
-@media (max-width: 576px) {
-  p {
-    text-align: center;
-  }
 }
 
 .navigation-links {
@@ -69,6 +49,10 @@ p {
   text-transform: capitalize;
   background: var(--primary-color);
   box-shadow: var(--box-shadow);
+  color: white;
+}
+
+.primary-link:hover {
   color: white;
 }
 
@@ -108,6 +92,20 @@ p {
 }
 
 @media (max-width: 576px) {
+  h1 {
+    font-size: 48px;
+    line-height: 1.5;
+  }
+
+  h2 {
+    font-size: 32px;
+    text-align: center;
+  }
+
+  p {
+    text-align: center;
+  }
+
   .project-link {
     display: block;
     text-align: center;
